--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -154,3 +154,29 @@ contact Page
 	filter: grayscale(0%);
 }
 
+
+/***************
+All Responsive
+***************/
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+	.contact-img {
+		margin-bottom: 5rem;
+	}	  
+
+}
+
+/* ----------- iPad 1, 2, Mini and Air ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+	.contact-img {
+		margin-bottom: 5rem;
+	}	  
+}
